--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Docker
+name: CI/CD Minikube
 
 on:
   push:
@@ -11,48 +11,57 @@ env:
 
 jobs:
   build:
-    name: Build
+    name: Build & Push
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Cache Docker layers
         uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ env.VERSION }}
           restore-keys: ${{ runner.os }}-buildx-
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
+
       - name: Build and Push Docker Image
-        id: docker_build
         uses: docker/build-push-action@v5
         with:
-          builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
 
   deploy:
     needs: build
-    name: Deploy
+    name: Deploy to Minikube
     runs-on: [ self-hosted, label-go ]
     steps:
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_TOKEN }}
-      - name: Docker Run
+      - uses: actions/checkout@v4
+
+      - name: Set Docker environment for Minikube
         run: |
-          docker stop ${{ env.NAME }} || true
-          docker rm ${{ env.NAME }} || true
-          docker rmi ${{ env.DOCKER_IMAGE }}:latest || true
-          docker run -d -p 3003:3000 --name ${{ env.NAME }} --restart always \
-            ${{ env.DOCKER_IMAGE }}:latest
+          minikube start --driver=docker || true
+          eval $(minikube docker-env)
+
+      - name: Pull Docker Image
+        run: |
+          docker login ghcr.io -u ${{ github.repository_owner }} -p ${{ secrets.GHCR_TOKEN }}
+          docker pull ${{ env.DOCKER_IMAGE }}:latest
+
+      - name: Deploy Application to Minikube
+        run: |
+          kubectl delete deployment/${{ env.NAME }} --ignore-not-found=true
+          kubectl create deployment ${{ env.NAME }} --image=${{ env.DOCKER_IMAGE }}:latest
+          kubectl expose deployment ${{ env.NAME }} --type=NodePort --port=3000 --name=${{ env.NAME }}-service --overwrite=true
+
+      - name: Verify Deployment
+        run: |
+          kubectl rollout status deployment/${{ env.NAME }}
+          minikube service ${{ env.NAME }}-service --url
