--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,8 +47,7 @@ jobs:
 
       - name: Set Docker environment for Minikube
         run: |
-          minikube start --driver=docker || true
-          eval $(minikube docker-env)
+          minikube status || minikube start --driver=docker
 
       - name: Configure GHCR Credentials for Kubernetes
         run: |
@@ -72,9 +71,15 @@ jobs:
             -o yaml > deploy-with-secret.yaml
 
           kubectl apply -f deploy-with-secret.yaml
-          kubectl expose deployment ${{ env.NAME }} --type=NodePort --port=3000 --name=${{ env.NAME }}-service
+
+          kubectl expose deployment ${{ env.NAME }} \
+            --type=NodePort \
+            --port=3000 \
+            --name=${{ env.NAME }}-service \
+            --overrides='{"spec":{"ports":[{"port":3000,"targetPort":3000,"nodePort":30003}]}}' \
+            --dry-run=client -o yaml | kubectl apply -f -
 
       - name: Verify Deployment
         run: |
           kubectl rollout status deployment/${{ env.NAME }}
-          minikube service ${{ env.NAME }}-service --url
+          minikube service ${NAME}-service --url
