feat: add cloudscraper for anti-bot protection

--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0",
-    "puppeteer": "^24.6.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "cloudscraper": "^4.6.0",
   },
   "scripts": {
     "start": "bun src/index.ts"
