--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "cheerio": "^1.0.0",
-    "puppeteer": "^24.6.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "cheerio": "^1.0.0"
   },
   "scripts": {
     "start": "bun src/index.ts"
