chore: add Biome linter configuration

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "module": "index.ts",
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@types/bun": "latest"
   },
   "peerDependencies": {
