--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "bap-back",
   "type": "module",
-  "module": "index.ts",
+  "main": "src/index.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "@types/node": "^20.0.0",
+    "typescript": "^5.0.0",
+    "tsx": "^4.0.0",
+    "nodemon": "^3.0.0"
   },
   "dependencies": {
     "@scrapeless-ai/sdk": "^1.5.1",
@@ -16,6 +19,9 @@
     "puppeteer-core": "^24.10.2"
   },
   "scripts": {
-    "start": "bun src/index.ts"
+    "start": "node src/index.js",
+    "dev": "nodemon --exec tsx src/index.ts",
+    "build": "tsc",
+    "type-check": "tsc --noEmit"
   }
 }
