--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "bap-back",
   "type": "module",
-  "main": "src/index.js",
-  "engines": {
-    "node": ">=18.0.0"
-  },
+  "module": "index.ts",
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "tsx": "^4.0.0",
-    "nodemon": "^3.0.0"
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "@scrapeless-ai/sdk": "^1.5.1",
@@ -19,9 +16,6 @@
     "puppeteer-core": "^24.10.2"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon --exec tsx src/index.ts",
-    "build": "tsc",
-    "type-check": "tsc --noEmit"
+    "start": "bun src/index.ts"
   }
 }
